--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/miniproject2
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+
+
+
+spring.jwt.secret=7777777ddddddddddddaaaaaaaaaaaaaaddddddddddddwwwwwwwwwww
