--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=miniproject2
 
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=qwer1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/miniproject2
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
 
 
 spring.jwt.secret=7777777ddddddddddddaaaaaaaaaaaaaaddddddddddddwwwwwwwwwww
